[project]
name = "window"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.193.0",
    "matplotlib>=3.10.8",
    "ollama>=0.6.1",
    "opencv-python>=4.13.0.92",
    "pillow >=12.1.1",
    "python-dotenv>=1.2.2",
    "schedule>=1.2.2",
    "yt-dlp>=2026.3.17",
]
